[package]
name = "reddit-streamer-fluvio"
version = "0.1.0"
edition = "2021"

[dependencies]
fluvio = "0.23.1"
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clean_text = { path = "./clean_text" }


[profile.release-lto]
inherits = "release"
lto = true
strip = "symbols"
