[package]
name = "clean_text"
version = "0.1.0"
authors = ["Sushant <sushant.dhiman9812@gmail.com>"]
edition = "2021"

[lib]
crate-type = ['cdylib']

[dependencies]
fluvio-smartmodule = "0.7.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"


[profile.release-lto]
inherits = "release"
lto = true
strip = "symbols"
